@@ -17,7 +17,6 @@
 package cTree.cAlter;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 
 import cTree.CElement;
 import cTree.CFences;
@@ -25,9 +24,8 @@ import cTree.CFrac;
 import cTree.CMessage;
 import cTree.CPlusRow;
 import cTree.CRolle;
-import cTree.adapter.C_Event;
 
-public class CA_Frac_InSumme extends CAlter {
+public class CA_Frac_InSumme extends CA_Base {
 
     private CFrac cFrac;
 
@@ -61,24 +59,21 @@ public class CA_Frac_InSumme extends CAlter {
 
     @Override
     public boolean canDo() {
-        final C_Event event = this.getEvent();
-        final ArrayList<CElement> els = event.getSelection();
-        if (els.size() > 0 && els.get(0) instanceof CFrac
-                && (els.get(0).getCRolle() != CRolle.FRACTION)) {
-            this.cFrac = (CFrac) els.get(0);
-            this.z = this.cFrac.getZaehler();
-            this.n = this.cFrac.getNenner();
-            if (this.z instanceof CPlusRow) {
-                final CPlusRow zsumme = (CPlusRow) this.z;
-                this.zs = zsumme.getMemberList();
-                return true;
+        if (this.getEvent() != null && this.getEvent().getFirst() != null) {
+            final CElement first = this.getFirst();
+            if (first instanceof CFrac
+                    && (first.getCRolle() != CRolle.FRACTION)) {
+                this.cFrac = (CFrac) first;
+                this.z = this.cFrac.getZaehler();
+                this.n = this.cFrac.getNenner();
+                if (this.z instanceof CPlusRow) {
+                    final CPlusRow zsumme = (CPlusRow) this.z;
+                    this.zs = zsumme.getMemberList();
+                    return true;
+                }
             }
         }
         return false;
     }
 
-    @Override
-    public void register(final HashMap<String, CAlter> hashMap) {
-        hashMap.put(this.getText(), this);
-    }
 }
