@@ -16,17 +16,13 @@
 
 package cTree.cAlter;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-
 import cTree.CElement;
 import cTree.CFences;
 import cTree.CFrac;
 import cTree.CMinTerm;
 import cTree.CPlusRow;
-import cTree.adapter.C_Event;
 
-public class CA_Frac_Min1Vorziehen extends CAlter {
+public class CA_Frac_Min1Vorziehen extends CA_Base {
 
     private CFrac cFrac;
 
@@ -68,20 +64,17 @@ public class CA_Frac_Min1Vorziehen extends CAlter {
 
     @Override
     public boolean canDo() {
-        final C_Event event = this.getEvent();
-        final ArrayList<CElement> els = event.getSelection();
-        if (els.size() > 0 && els.get(0) instanceof CFrac) {
-            this.cFrac = (CFrac) els.get(0);
-            this.z = this.cFrac.getZaehler();
-            this.n = this.cFrac.getNenner();
-            return !(this.z instanceof CPlusRow);
+        if (this.getEvent() != null && this.getEvent().getFirst() != null) {
+            final CElement first = this.getFirst();
+            if (first instanceof CFrac) {
+                this.cFrac = (CFrac) first;
+                this.z = this.cFrac.getZaehler();
+                this.n = this.cFrac.getNenner();
+                return !(this.z instanceof CPlusRow);
 
+            }
         }
         return false;
     }
 
-    @Override
-    public void register(final HashMap<String, CAlter> hashMap) {
-        hashMap.put(this.getText(), this);
-    }
 }
